kathara (__VERSION__-__DEBIAN_PACKAGE_VERSION____UBUNTU_VERSION__) __UBUNTU_VERSION__; urgency=low

  * Fix ltest exec commands
  * Fix check command

 -- Mariano Scazzariello <******@gmail.com>  __DATE__